# KamiCmd

./: .gitignore  .hgignore  3rdparty.pro  CMakeLists.txt  Compile-win32-VisualStudio.txt  Compile-win32-nmake.txt  SetupManifest.xml  config.pri  install.txt  kamicmd.pro
cmake/: Internal.cmake  KamiCmdModuleDev.cmake  qt4_wrap_ts.cmake
debug/Resources/: Associations.rcc  UnitManager_Tabs.rcc
src/: CMakeLists.txt  IArchiver.h  IAssociations.h  IFileCopy.h  IFileOperation.h  IFileSystem.h  ILibrary.h  IPanel.h  IUnitManager.h  src.pro
src/FS_Qt/: CMakeLists.txt  FS_Qt.cpp  FS_Qt.h  FS_Qt.pro  library.cpp  library.h
src/FS_Windows/: CMakeLists.txt  FS_Windows.cpp  FS_Windows.h  library.cpp  library.h
src/FileCopy/FileCopy_Qt/: CopyDialog.cpp  CopyDialog.h  CopyDialog.ui  CopyProgressDialog.cpp  CopyProgressDialog.h  CopyProgressDialog.ui  CopyThread.cpp  CopyThread.h  FileCopy.cpp  FileCopy.h  FileCopy_Qt.pro  FileCopy_Qt.vcxproj.vspscc  FilesToCopy.cpp  FilesToCopy.h  library.cpp  library.h
src/FileCopy/FileCopy_Widget/: CMakeLists.txt  CopyWidget.cpp  CopyWidget.h  CopyWidget.ui  FileCopy_Widget.pro  library.cpp
src/FileCopy/FileCopy_Windows/: CMakeLists.txt  Copy.cpp  Copy.h  FileCopy_Windows.pro  library.cpp
src/FileCopy/FileCopy_misc/: FilesToCopy.cpp
src/FileOperationDummy/: DummyProgressDialog.cpp  DummyProgressDialog.h  FileOperationDummy.cpp  FileOperationDummy.h  FileOperationDummy.pro  dummyprogressdialog.ui  library.cpp  library.h
src/File_Copy_Windows/: Copy.cpp  Copy.h  library.cpp  library.h
src/KamiCmd/: CMakeLists.txt  CoreFunctions.cpp  CoreFunctions.h  DebugDialog.cpp  DebugDialog.h  DebugDialog.ui  DebugLog.cpp  DebugLog.h  KamiCmd.aps  KamiCmd.cpp  KamiCmd.desktop  KamiCmd.desktop.in  KamiCmd.h  KamiCmd.icns  KamiCmd.pro  KamiCmd.rc  directories.h.in  main.cpp
src/Lib_Lexers/: CMakeLists.txt  Lib_Lexers.pro  ObjectWrapper.h  getLexers.cpp  getLexers.h  library.cpp  library.h
src/Operations_Queue/: CMakeLists.txt  FileOperationTask.cpp  FileOperationTask.h  OperationQueueDialog.cpp  OperationQueueDialog.h  OperationQueueDialog.ui  OperationQueueModel.cpp  OperationQueueModel.h  OperationsQueue.cpp  OperationsQueue.h  OperationsView.cpp  OperationsView.h  Operations_Queue.pro  ProgressDelegate.cpp  ProgressDelegate.h  library.cpp  library.h  oqwidget.cpp  oqwidget.h  oqwidget.ui
src/Panel_Classic/: !ToDo!.txt  CMakeLists.txt  FileListHeader.cpp  FileListHeader.h  FileListModel.cpp  FileListModel.h  FileListView.cpp  FileListView.h  FilesDelegate.cpp  FilesDelegate.h  FilesDelegate_win.h  Panel_Classic.cpp  Panel_Classic.h  Panel_Classic.pro  QuickSearchWidget.cpp  QuickSearchWidget.h  QuickSearchWidget.ui  SelectionModel.cpp  SelectionModel.h  SortModel.cpp  SortModel.h  library.cpp  library.h
src/UnitManager_Tabs/: ActionManager.cpp  ActionManager.h  ActionsDialog.cpp  ActionsDialog.h  ActionsDialog.ui  Associations.cpp  Associations.h  AssociationsDialog.cpp  AssociationsDialog.h  AssociationsDialog.ui  AssociationsDialog_Edit.cpp  AssociationsDialog_Edit.h  AssociationsDialog_Edit.ui  ButtonsBar.cpp  ButtonsBar.h  CMakeLists.txt  DebugDialog.cpp  DebugDialog.h  FButtonsBar.cpp  FButtonsBar.h  LinkedUnit.cpp  LinkedUnit.h  ModulesDialog.cpp  ModulesDialog.h  ModulesDialog.ui  TabWidget.cpp  TabWidget.h  UnitManager_Tabs.cpp  UnitManager_Tabs.h  UnitManager_Tabs.pro  UnitManager_Tabs.qrc  library.cpp  library.h
src/Unit_Console/: CMakeLists.txt  ConsoleWidget.cpp  ConsoleWidget.h  Unit_Console.cpp  Unit_Console.h  Unit_Console.pro  library.cpp  library.h
src/Unit_KamiShell/: CMakeLists.txt  ConsoleWidget.cpp  ConsoleWidget.h  Unit_KamiShell.cpp  Unit_KamiShell.h  Unit_KamiShell.pro  library.cpp  library.h
src/Unit_Lexers/: Unit_Lexers.pro  basicLexers.cpp  library.cpp  library.h
src/Unit_PictureView/: CMakeLists.txt  Unit_PictureView.cpp  Unit_PictureView.h  Unit_PictureView.pro  library.cpp  library.h
src/Unit_TextEditor/: CMakeLists.txt  ColorSelectionWidget.cpp  ColorSelectionWidget.h  EditorSettings.cpp  EditorSettings.h  EditorSettings.ui  Extension.h  FontSelectionWidget.cpp  FontSelectionWidget.h  ILexerPlugin.h  LexerSettings.cpp  LexerSettings.h  LexerSettings.ui  LexersDelegate.cpp  LexersDelegate.h  LexersDialog.cpp  LexersDialog.h  LexersDialog.ui  LexersModel.cpp  LexersModel.h  SciSettings.cpp  SciSettings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  TODO  Unit_TextEditor.cpp  Unit_TextEditor.h  Unit_TextEditor.pro  library.cpp  library.h  ui_LexersDialog.h
src/Unit_WebKit/: CMakeLists.txt  Unit_WebKit.cpp  Unit_WebKit.h  Unit_WebKit.pro  library.cpp  library.h
