include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(FS_Qt)
add_subdirectory(KamiCmd)
add_subdirectory(Lib_Lexers)
add_subdirectory(Operations_Queue)
add_subdirectory(Panel_Classic)
add_subdirectory(UnitManager_Tabs)
#add_subdirectory(Unit_Console)
add_subdirectory(Unit_KamiShell)
add_subdirectory(Unit_PictureView)
add_subdirectory(Unit_TextEditor)
add_subdirectory(Unit_WebKit)
add_subdirectory(FileCopy/FileCopy_Widget)

if (WIN32)
    add_subdirectory(FS_Windows)
    add_subdirectory(FileCopy/FileCopy_Windows)
endif()